PROD_10-24-19/force-app/main/default/objects/Support_Trends__c/Support_Trends__c.object-meta.xml
<CustomObject>
    <label>Support Trend</label>
    <nameField>
        <displayFormat>SS-{000000}</displayFormat>
        <label>Support Trends Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>