PROD_10-24-19/force-app/main/default/objects/Support_Trends__c/fields/Assigned_Age__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Age__c</fullName>
    <label>Assigned Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>