PROD_10-24-19/force-app/main/default/objects/Support_Trends__c/fields/Case_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_Date__c</fullName>
    <label>Case Assigned Date</label>
    <type>DateTime</type>
</CustomField>