PROD_10-24-19/force-app/main/default/objects/Support_Trends__c/fields/Case_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Report_Type__c</fullName>
    <label>Case Report Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>